--- a/crates/nostr/Cargo.toml
+++ b/crates/nostr/Cargo.toml
@@ -39,6 +39,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 thiserror = "1.0"
 url = { version = "2", features = ["serde"], optional = true }
+uuid = {version = "1.2.2", features = ["v4"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 instant = { version = "0.1", features = [ "stdweb", "inaccurate" ] }
